Frontend Respuestas Terminado + DeleteRespuestasByPreguntaId endpoint
